# hello-rust

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  devbox.json  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
src/: main.rs
