[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
description = "Rustacean hopeful"
repository = "https://github.com/pythoninthegrass/hello-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { version = "0.15.7", features = ["cli"] }
